fix [button] add style no-wrap

--- a/assets/scss/button.scss
+++ b/assets/scss/button.scss
@@ -7,6 +7,7 @@
   @apply rounded;
   @apply border;
   @apply border-grey-light;
+  @apply whitespace-no-wrap;
   @apply #{$btn-bg-default};
 
   &:hover {
